aligned scores into object and print to span

--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,9 @@ section {
 	}
 	fieldset {display:none;}
 	/***End****/
-
+	#abilitiesSpan {
+		padding: 2%;
+	}
 
 /*******************End Pages******************/	
 	
